SmartBuys Philippines: - Update Project add login functionality - Fix shopping flow - Create Email template for ordering - Incorporate Redux to admin - Create admin functionality - Create email sender flow - Fix create order flow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -96,6 +96,10 @@ body::after {
   color:green !important;
 }
 
+/* .nextui-backdrop-layer {
+  background: rgba(0, 0, 0, 0.65) !important;
+} */
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
