--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,15 +2,20 @@ html,
 body {
   font-family: 'Ubuntu' !important;
   overflow-x: hidden;
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.6) 0%, rgba(255, 255, 255, 0.6) 100%), url('/static/world_map.webp');
+  background: linear-gradient(
+      to bottom,
+      rgba(255, 255, 255, 0.6) 0%,
+      rgba(255, 255, 255, 0.6) 100%
+    ),
+    url('/static/world_map.webp');
   /* background-image: url('/static/world_map.webp'); */
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   -webkit-font-smoothing: antialiased;
   font-size: 1rem;
   font-weight: 400;
@@ -19,7 +24,7 @@ body {
   height: 100vh;
   display: block;
   position: relative;
-  content: "";
+  content: '';
 }
 
 /* body::before {
@@ -69,7 +74,7 @@ body::after {
 }
 
 .nextui-navbar-item .nextui-link .nextui-navbar-link {
-  color: #ffffff
+  color: #ffffff;
 }
 
 ::-webkit-scrollbar {
@@ -78,12 +83,12 @@ body::after {
 }
 
 .nextui-navbar-container {
-  background-color: rgb(255,0,0,1) !important;
+  background-color: rgb(255, 0, 0, 1) !important;
   border: '1px solid yellow' !important;
 }
 
 .nextui-c-gEEnVX-fJMMFA-color-success .nextui-avatar-bg {
-  background:gold !important;
+  background: gold !important;
 }
 
 .nextui-c-gEEnVX-iHugVF-size-md .nextui-avatar-text {
@@ -93,7 +98,7 @@ body::after {
 
 .css-16ac5r2-MuiButtonBase-root-MuiListItemButton-root.Mui-selected {
   background-color: transparent !important;
-  color:green !important;
+  color: green !important;
 }
 
 /* .nextui-backdrop-layer {
@@ -103,15 +108,11 @@ body::after {
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
-  --fonts-sans: "Ubuntu", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-  --font-mono: "Ubuntu",
-    Monaco,
-    "Lucida Console",
-    "Liberation Mono",
-    "DejaVu Sans Mono",
-    "Bitstream Vera Sans Mono",
-    "Courier New",
-    monospace;
+  --fonts-sans: 'Ubuntu', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+    'Helvetica Neue', sans-serif;
+  --font-mono: 'Ubuntu', Monaco, 'Lucida Console', 'Liberation Mono',
+    'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', 'Courier New', monospace;
 
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -196,4 +197,8 @@ a {
   html {
     color-scheme: dark;
   }
+}
+
+.MuiTelInput-TextField {
+  width: 100vw !important;
 }
