--- a/public/email-templates/order-customer.ejs
+++ b/public/email-templates/order-customer.ejs
@@ -35,6 +35,7 @@
           <h1>Hello <%= fullName %>! Thank you for your purchase</h1>
           <h3><%= email%></h3>
           <h4><%= address%></h4>
+          <h4><%= mobile%></h4>
           <h5>We received your order!</h5>
         </div>
         <div class="row justify-content-center">
