--- a/public/email-templates/order.ejs
+++ b/public/email-templates/order.ejs
@@ -35,6 +35,7 @@
           <h1>Congratulations! New order from <%= fullName %>!</h1>
           <h3><%= email%></h3>
           <h4><%= address%></h4>
+          <h4><%= mobile%></h4>
           <h5>Order details:</h5>
         </div>
         <div class="row justify-content-center">
