--- a/public/email-templates/message.ejs
+++ b/public/email-templates/message.ejs
@@ -44,7 +44,7 @@
                                                          <td class="r2-c" align="center">
                                                             <table cellspacing="0" cellpadding="0" border="0" role="presentation" width="200" class="r3-o" style="table-layout: fixed; width: 200px;">
                                                                <tr>
-                                                                  <td style="font-size: 0px; line-height: 0px;"> <a href="#"><img src="https://smartbuys-philippines.vercel.app/images/smartbuys_wings.webp&w=640&q=50" width="358" border="0" style="display: block; width: 100%; cursor: default;"></img></a></td>
+                                                                  <td style="font-size: 0px; line-height: 0px;"> <a href="#"><img src="https://smartbuys-philippines.vercel.app/images/smartbuys_wings.webp" width="358" border="0" style="display: block; width: 100%; cursor: default;"></img></a></td>
                                                                </tr>
                                                             </table>
                                                          </td>
@@ -108,7 +108,7 @@
                                                          <td class="r2-c" align="center">
                                                             <table cellspacing="0" cellpadding="0" border="0" role="presentation" width="200" class="r3-o" style="table-layout: fixed; width: 200px;">
                                                                <tr>
-                                                                  <td style="font-size: 0px; line-height: 0px;"> <a href="#"><img src="https://smartbuys-philippines.vercel.app/images/smartbuys_wings.webp&w=640&q=50" width="200" border="0" style="display: block; width: 100%; cursor: default;"></img></a></td>
+                                                                  <td style="font-size: 0px; line-height: 0px;"> <a href="#"><img src="https://smartbuys-philippines.vercel.app/images/smartbuys_wings.webp" width="200" border="0" style="display: block; width: 100%; cursor: default;"></img></a></td>
                                                                </tr>
                                                             </table>
                                                          </td>
